source/carehub/main/default/objects/ContactToLocation__c/fields/LocationId__c.field-meta.xml
<CustomField>
    <fullName>LocationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Name</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Contacts To Locations</relationshipLabel>
    <relationshipName>ContactsToLocations</relationshipName>
    <type>Lookup</type>
</CustomField>