source/carehub/main/default/objects/ContactToLocation__c/fields/LocationIdFormula__c.field-meta.xml
<CustomField>
    <fullName>LocationIdFormula__c</fullName>
    <formula>Syntilio__LocationId__r.Syntilio__LocationId__c</formula>
    <label>Location ID</label>
    <type>Text</type>
</CustomField>