source/carehub/main/default/objects/ContactToLocation__c/fields/MainLocationName__c.field-meta.xml
<CustomField>
    <fullName>MainLocationName__c</fullName>
    <formula>IF(LocationId__r.MainLocation__c, LocationId__r.Name  , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Location Name</label>
    <type>Text</type>
</CustomField>